tests/snapshots/snapshots/snapshots__snapshots__cli_output__help_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
ID-REDACTED issue tracker (SQLite + JSONL)

Usage: br [OPTIONS] <COMMAND>

Commands:
  agents        Manage AGENTS.md workflow instructions
  audit         Record and label agent interactions (ID-REDACTED JSONL)
  blocked       List blocked issues
  capabilities  Describe br's ID-REDACTED contracts and safety guarantees
  capacity      Workflow capacity management: audited ID-REDACTED exemptions (GitHub #384)
  changelog     Generate changelog from closed issues
  close         Close an issue
  comments      Manage comments
  completions   Generate shell completions
  config        Configuration management
  coordination  Diagnose swarm coordination state without mutating claims
  count         Count issues with optional grouping
  create        Create a new issue
  defer         Defer issues (schedule for later)
  delete        Delete an issue (creates tombstone)
  dep           Manage dependencies
  doctor        Run diagnostics and optionally repair issues
  epic          Epic management commands
  roadmap       Show containment and traceability as one workflow roadmap
  gate          Workflow gate engine: record and inspect gate results (issue #312)
  graph         Visualize the dependents graph: what an issue unblocks
  history       Manage local history backups
  info          Show diagnostic metadata about the workspace
  init          Initialize a beads workspace
  label         Manage labels
  lint          Check issues for missing template sections
  list          List issues
  orphans       List orphan issues (referenced in commits but open)
  q             Quick capture (create issue, print ID only)
  query         Manage saved queries
  ready         List ready issues (open, unblocked, not deferred)
  redirect      Manage worktree workspace redirects
  reopen        Reopen an issue
  ID-REDACTED    Print concise ID-REDACTED docs for automation agents
  scheduler     Rank ready work for agent swarms with explainable evidence
  schema        Emit JSON Schemas and ID-REDACTED output envelope shapes (for agent/tooling integration)
  search        Search issues
  show          Show issue details
  stale         List stale issues
  stats         Show project statistics
  status        Alias for stats
  sync          Sync database with JSONL file (export or import)
  undefer       Undefer issues (make ready again)
  update        Update an issue
  vcs-status    Explicitly inspect Git visibility for the configured JSONL export
  serve         Start an MCP (Model Context Protocol) server on stdio
  upgrade       Upgrade br to the latest version
  version       Show version information
  where         Show the active .beads directory
  help          Print this message or the help of the given subcommand(s)

Options:
      --db <DB>                      Database path (ID-REDACTED .beads/*.db if not set)
      --actor <ACTOR>                Actor name for audit trail
      --json                         Output as JSON
      --ID-REDACTED                    Force direct mode (no daemon) - effectively no-op in br v1
      --ID-REDACTED                Skip auto JSONL export
      --ID-REDACTED               Skip auto import check
      --ID-REDACTED                  Allow stale DB (bypass freshness check warning)
      --ID-REDACTED <LOCK_TIMEOUT>  `SQLite` busy/ID-REDACTED timeout in ms
      --no-db                        ID-REDACTED mode (no DB connection)
  -v, --verbose...                   Increase logging verbosity (-v, -vv)
  -q, --quiet                        Quiet mode (no output except errors)
      --ID-REDACTED                     Disable colored output
  -h, --help                         Print help
  -V, --version                      Print version
